fixed bottom padding on about section on mobile

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header {
 
 .navbar-dark {
     background: rgba(0, 0, 0, 0.8);
-    padding: 0 5%;
+    padding: 0 2rem;
 }
 
 .navbar-brand {
@@ -111,7 +111,8 @@ header {
     justify-content: center;
     align-items: center;
     background-color: white;
-    margin-bottom: 4rem;
+    padding-bottom: 4rem;
+    padding-top: 1rem;
 }
 
 .about-section-text {
